--- a/app/src/main/res/layout/activity_produtorepolhoverde.xml
+++ b/app/src/main/res/layout/activity_produtorepolhoverde.xml
@@ -25,7 +25,7 @@
 
 
             <ImageView
-                android:id="@+id/imageView2"
+                android:id="@+id/imageViewRuc"
                 android:layout_width="350dp"
                 android:layout_height="343dp"
                 android:layout_marginStart="152dp"
