--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -88,7 +88,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <com.google.android.material.card.MaterialCardView
-                android:id="@+id/mCardViewPass"
+                android:id="@+id/mCardViewNome"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:layout_marginStart="15dp"
@@ -122,7 +122,7 @@
                 app:cardBackgroundColor="@color/entradaDados"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/mCardViewPass">
+                app:layout_constraintTop_toBottomOf="@+id/mCardViewNome">
 
                 <EditText
                     android:id="@+id/editCNPJ"
