--- a/app/src/main/res/layout/activity_market.xml
+++ b/app/src/main/res/layout/activity_market.xml
@@ -23,7 +23,6 @@
             android:layout_height="274dp"
             android:layout_marginBottom="550dp"
             android:rotation="-80"
-            android:src="@tools:sample/avatars"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:srcCompat="@drawable/img_cad" />
@@ -97,13 +96,13 @@
                             android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:gravity="center"
-                            android:onClick="clickSub"
+                            android:onClick="clickSub3"
                             android:text="@string/strSubtrair"
                             android:textSize="16sp"
                             android:textStyle="bold" />
 
                         <TextView
-                            android:id="@+id/txtQtd3"
+                            android:id="@+id/txtQtdAlfC"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
@@ -118,7 +117,7 @@
                             android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:gravity="center"
-                            android:onClick="clickSomar"
+                            android:onClick="clickSomar3"
                             android:text="@string/strSomar"
                             android:textSize="16sp"
                             android:textStyle="bold" />
@@ -131,8 +130,9 @@
             android:id="@+id/mCardViewRepV"
             android:layout_width="174dp"
             android:layout_height="236dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginBottom="90dp"
             app:cardCornerRadius="15dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/mCardViewAlfC">
@@ -148,8 +148,8 @@
                     android:layout_width="116dp"
                     android:layout_height="123dp"
                     android:layout_marginTop="10dp"
-                    android:onClick="clickDescRepV"
                     android:contentDescription="no"
+                    android:onClick="clickDescRepV"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -311,13 +311,13 @@
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:gravity="center"
-                        android:onClick="clickSub"
+                        android:onClick="clickSub1"
                         android:text="@string/strSubtrair"
                         android:textSize="16sp"
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/txtQtd1"
+                        android:id="@+id/txtQtdRuc"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
@@ -332,7 +332,7 @@
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:gravity="center"
-                        android:onClick="clickSomar"
+                        android:onClick="clickSomar1"
                         android:text="@string/strSomar"
                         android:textSize="16sp"
                         android:textStyle="bold" />
@@ -345,8 +345,8 @@
         android:id="@+id/mCardViewAlfL"
         android:layout_width="174dp"
         android:layout_height="236dp"
-        android:layout_marginTop="30dp"
         app:cardCornerRadius="15dp"
+        app:layout_constraintBottom_toTopOf="@+id/MCardViewNav"
         app:layout_constraintEnd_toStartOf="@+id/constraintLayout"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/mCardViewRuc">
@@ -362,8 +362,8 @@
                 android:layout_width="116dp"
                 android:layout_height="123dp"
                 android:layout_marginTop="10dp"
-                android:onClick="clickDescAlfL"
                 android:contentDescription="no"
+                android:onClick="clickDescAlfL"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -410,13 +410,13 @@
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:gravity="center"
-                        android:onClick="clickSub"
+                        android:onClick="clickSub2"
                         android:text="@string/strSubtrair"
                         android:textSize="16sp"
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/txtQtd2"
+                        android:id="@+id/txtQtdAlfL"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
@@ -431,7 +431,7 @@
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:gravity="center"
-                        android:onClick="clickSomar"
+                        android:onClick="clickSomar2"
                         android:text="@string/strSomar"
                         android:textSize="16sp"
                         android:textStyle="bold" />
@@ -470,6 +470,7 @@
                 android:layout_weight="1"
                 android:backgroundTint="@color/lightBack"
                 android:contentDescription="no"
+                android:onClick="clickCarrinho"
                 android:src="@drawable/carrinho_icon" />
 
             <ImageButton
@@ -479,6 +480,7 @@
                 android:layout_weight="1"
                 android:backgroundTint="@color/lightBack"
                 android:contentDescription="no"
+                android:onClick="clickHome"
                 android:src="@drawable/home_icon" />
 
             <ImageButton
