--- a/app/src/main/res/layout/activity_esqueci_senha.xml
+++ b/app/src/main/res/layout/activity_esqueci_senha.xml
@@ -150,6 +150,7 @@
             android:layout_marginTop="15dp"
             android:layout_marginBottom="15dp"
             android:layout_weight="1"
+            android:onClick="clickVoltar"
             android:text="@string/strVoltar"
             android:textSize="18sp" />
     </LinearLayout>
