feature qtd de produtos complete

--- a/app/src/main/res/layout/activity_produtoalfacelisa.xml
+++ b/app/src/main/res/layout/activity_produtoalfacelisa.xml
@@ -91,7 +91,7 @@
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/txtQtdAlfC"
+                        android:id="@+id/txtQtdAlfL"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
