--- a/app/src/main/res/layout/activity_esqueci_senha.xml
+++ b/app/src/main/res/layout/activity_esqueci_senha.xml
@@ -52,7 +52,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/txtPerfilTitulo">
 
                 <EditText
-                    android:id="@+id/editTextText18"
+                    android:id="@+id/editTxtNome"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@color/entradaDados"
@@ -75,7 +75,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/materialCardView2">
 
                 <EditText
-                    android:id="@+id/editTextText20"
+                    android:id="@+id/editTxtCnpj"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@color/entradaDados"
@@ -98,7 +98,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/materialCardView4">
 
                 <EditText
-                    android:id="@+id/editTextText22"
+                    android:id="@+id/editTxtCep"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@color/entradaDados"
